@@ -67,6 +67,7 @@
       <signal>
 	<name>selection_received</name>
 	<handler>on_query_selection_received</handler>
+	<after>True</after>
 	<last_modification_time>Sat, 16 Mar 2002 21:46:37 GMT</last_modification_time>
       </signal>
       <editable>True</editable>
@@ -83,7 +84,6 @@
     <widget>
       <class>GtkButton</class>
       <name>prefs</name>
-      <can_focus>True</can_focus>
       <signal>
 	<name>clicked</name>
 	<handler>on_prefs_clicked</handler>
